# stm32-matrix-game

./: Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
