[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
# Replace stm32f303xc with your target chip, see next section for more info
stm32f3xx-hal = { version = "0.8.1", features = ["ld", "rt", "stm32f303xe"] }
embedded-hal = "*"
max7219-dot-matrix = { git = "https://github.com/ninjasource/max7219-dot-matrix", rev = "f1b25c2" }